@@ -232,7 +232,8 @@ evaluable predicates hash-tables (default size: 128).
 
 \item[\code{-p}] can be used to parse and print the temporal operator in English
 instead of the single letter. It will parse and print \code{achieve} instead of \samp{!},
-and \code{wait} instead of \samp{\^{}} and so on.
+and \code{wait} instead of \samp{\^{}} and so on.  The parser understands both syntaxes,
+ but the printer will output the english form.
 
 \item[\code{-l upper|lower|none}] can be used to print and parse all the symbol
 and id in upper case, lower case or in no particular case. You may specify this
